# Autotools-tutorial

./: Makefile.am  configure.ac
include/: func.h
man/: test.1
po/: ja.po
src/: main.c  sub.c
